--- a/assertj-android-palette-v7/build.gradle
+++ b/assertj-android-palette-v7/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 dependencies {
   compile project(':assertj-android')
-  compile 'com.android.support:palette-v7:21.0.0-rc1'
+  compile 'com.android.support:palette-v7:21.0.0'
 }
 
 android {
