--- a/assertj-android-palette-v7/build.gradle
+++ b/assertj-android-palette-v7/build.gradle
@@ -10,7 +10,7 @@ android {
   buildToolsVersion rootProject.ext.buildToolsVersion
 
   defaultConfig {
-    minSdkVersion 'L'
+    minSdkVersion 21
   }
 
   compileOptions {
