--- a/assertj-android-gridlayout-v7/build.gradle
+++ b/assertj-android-gridlayout-v7/build.gradle
@@ -21,6 +21,22 @@ android {
   lintOptions {
     abortOnError false
   }
+
+  libraryVariants.all { variant ->
+      def name = variant.buildType.name
+      if (name.equals(com.android.builder.core.BuilderConstants.DEBUG)) {
+          return;
+      }
+      def task = project.tasks.create "jar${name.capitalize()}", Jar
+      task.dependsOn variant.javaCompile
+      task.from variant.javaCompile.destinationDir
+      task.from configurations.compile.findAll {
+          it.getName() != 'android.jar' && !it.getName().startsWith('junit') && !it.getName().startsWith('hamcrest')
+      }.collect {
+          it.isDirectory() ? it : zipTree(it)
+      }
+      artifacts.add('archives', task);
+  }
 }
 
 apply from: rootProject.file('gradle/checkstyle.gradle')
