--- a/assertj-android-play-services/build.gradle
+++ b/assertj-android-play-services/build.gradle
@@ -25,18 +25,13 @@ android {
 
   libraryVariants.all { variant ->
       def name = variant.buildType.name
-      if (name.equals(com.android.builder.core.BuilderConstants.DEBUG)) {
-          return;
+      // Only attach a jar for non-debug builds
+      if (!name.equals(com.android.builder.core.BuilderConstants.DEBUG)) {
+          def task = project.tasks.create "jar${name.capitalize()}", Jar
+          task.dependsOn variant.javaCompile
+          task.from variant.javaCompile.destinationDir
+          artifacts.add('archives', task);
       }
-      def task = project.tasks.create "jar${name.capitalize()}", Jar
-      task.dependsOn variant.javaCompile
-      task.from variant.javaCompile.destinationDir
-      task.from configurations.compile.findAll {
-          it.getName() != 'android.jar' && !it.getName().startsWith('junit') && !it.getName().startsWith('hamcrest')
-      }.collect {
-          it.isDirectory() ? it : zipTree(it)
-      }
-      artifacts.add('archives', task);
   }
 }
 
