Added assertions for preference-v7 support lib.
Basically a copy of preference assertions from module assertj-android/,
- minus some classes/methods not included in preference-v7
+ plus SwitchPreferenceCompat.

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include ':assertj-android-palette-v7'
 include ':assertj-android-play-services'
 include ':assertj-android-recyclerview-v7'
 include ':assertj-android-support-v4'
+include ':assertj-android-preference-v7'
