Update source repositories: mavenCentral -> jcenter

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 subprojects {
   buildscript {
     repositories {
-      mavenCentral()
+      jcenter()
     }
     dependencies {
       classpath 'com.android.tools.build:gradle:1.5.0'
@@ -9,7 +9,7 @@ subprojects {
   }
 
   repositories {
-    mavenCentral()
+    jcenter()
   }
 
   group = GROUP
