--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ subprojects {
 
   repositories {
     jcenter()
+    maven { url "https://maven.google.com" }
   }
 
   group = GROUP
@@ -17,20 +18,20 @@ subprojects {
 }
 
 ext {
-  minSdkVersion = 9
-  compileSdkVersion = 25
-  buildToolsVersion = '25.0.0'
+  minSdkVersion = 14
+  compileSdkVersion = 26
+  buildToolsVersion = '26.0.1'
 
   assertj = 'org.assertj:assertj-core:1.7.1'
-  supportAnnotations = 'com.android.support:support-annotations:25.0.1'
-  supportV4 = 'com.android.support:support-v4:25.0.1'
-  supportAppCompat = 'com.android.support:appcompat-v7:25.0.1'
-  supportCardView = 'com.android.support:cardview-v7:25.0.1'
-  supportDesign = 'com.android.support:design:25.0.1'
-  supportGridLayout = 'com.android.support:gridlayout-v7:25.0.1'
-  supportMediaRouter = 'com.android.support:mediarouter-v7:25.0.1'
-  supportPalette = 'com.android.support:palette-v7:25.0.1'
-  supportRecyclerView = 'com.android.support:recyclerview-v7:25.0.1'
+  supportAnnotations = 'com.android.support:support-annotations:26.0.0'
+  supportV4 = 'com.android.support:support-v4:26.0.0'
+  supportAppCompat = 'com.android.support:appcompat-v7:26.0.0'
+  supportCardView = 'com.android.support:cardview-v7:26.0.0'
+  supportDesign = 'com.android.support:design:26.0.0'
+  supportGridLayout = 'com.android.support:gridlayout-v7:26.0.0'
+  supportMediaRouter = 'com.android.support:mediarouter-v7:26.0.0'
+  supportPalette = 'com.android.support:palette-v7:26.0.0'
+  supportRecyclerView = 'com.android.support:recyclerview-v7:26.0.0'
 
   playServices = 'com.google.android.gms:play-services:7.5.0'
 
