travis.yml updated

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ subprojects {
   buildscript {
     repositories {
       jcenter()
+      maven { url "https://maven.google.com" }
     }
     dependencies {
       classpath 'com.android.tools.build:gradle:2.2.2'
